<resources>
    <string name="app_name">ramchat</string>
    <string name="create_new_account">YENİ HESAP OLUŞTUR</string>
    <string name="i_have_account">HESABIM VAR</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="email">email</string>
    <string name="password">Parola</string>
    <string name="lower_create_new_account">Yeni Hesap Oluştur</string>
    <string name="create_account">Hesap Oluştur</string>
    <string name="login_with_your_account">Hesabınızla Giriş Yapınız</string>
    <string name="login">Giriş Yap</string>
    <string name="Email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>