<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
     <include layout="@layout/actionbar_app" android:id="@+id/actionbarRegister" />

     <TextView
         android:id="@+id/txtinfo1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lower_create_new_account"
         android:textColor="@android:color/black"
         android:layout_below="@+id/actionbarRegister"
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
         android:textSize="20sp"
          />
     <TextView
         android:id="@+id/txtinfo2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/username"
         android:layout_below="@+id/txtinfo1"
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
         />
     <EditText
         android:id="@+id/txtUsernameRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txtinfo2"
         android:hint="@string/username"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         />
     <EditText
         android:id="@+id/txtemailRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txtUsernameRegister"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:layout_marginTop="20dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"

         />
     <EditText
         android:id="@+id/txtPasswordRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txtemailRegister"
         android:hint="@string/password"
         android:inputType="textPassword"
         android:layout_marginTop="20dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         />
     <Button
         android:id="@+id/btnRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/create_account"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="35dp"
         android:background="@color/black"
         android:textColor="@android:color/white"

         />

</RelativeLayout>